CompiladorC-Bison/parser.output
Terminales no usados en la gramática

    INCLUDE
    DEFINE
    ERROR
    MULVAR


Gramática

    0 $accept: statement_list $end

    1 statement_list: statement
    2               | statement_list statement

    3 statement: declaration_list PUNTOCOMA
    4          | declaration_init_list PUNTOCOMA
    5          | tipo_data defFunc
    6          | VOID defFunc
    7          | tipo_data defFunc PUNTOCOMA
    8          | VOID defFunc PUNTOCOMA
    9          | condicional_exp
   10          | iterador_exp
   11          | res_tokens PUNTOCOMA
   12          | etiqueta_statement
   13          | block_stmt

   14 res_tokens: RETURN
   15           | RETURN expression
   16           | CONTINUE
   17           | BREAK
   18           | GOTO ID

   19 primary_expression: id_arr
   20                   | error
   21                   | preSufix_expr
   22                   | callFunc
   23                   | ENTERO
   24                   | DIGITO
   25                   | CARACTER
   26                   | PAREN_A expression PAREN_C

   27 expression: primary_expression
   28           | expression op primary_expression
   29           | expression op_bool primary_expression
   30           | PAREN_A expression INTERROGACION expression DOSPUNTOS expression PAREN_C

   31 op: SUMA
   32   | RESTA
   33   | MUL
   34   | DIV
   35   | MOD

   36 preSufix_expr: preSufix_cicle id_side
   37              | preSufix_cicle id_arr
   38              | id_side

   39 id_side: id_arr op_inc_dec
   40        | op_inc_dec id_arr
   41        | op_inc_dec error
   42        | error op_inc_dec

   43 preSufix_cicle: preSufix_op
   44               | preSufix_cicle preSufix_op

   45 id_arr: ID
   46       | id_arr SPAREN_A expr_option SPAREN_C
   47       | id_arr SPAREN_A SPAREN_C
   48       | error SPAREN_A SPAREN_C
   49       | error SPAREN_A expr_option SPAREN_C

   50 op_inc_dec: INC
   51           | DEC

   52 preSufix_op: SUMA
   53            | RESTA
   54            | NOT

   55 declaration_init_list: tipo_data declaration_init_listP
   56                      | tipo_data

   57 declaration_init_listP: asign_cicle
   58                       | id_arr
   59                       | declaration_init_listP COMA asign_cicle
   60                       | declaration_init_listP COMA id_arr

   61 declaration_list: expression_list
   62                 | asign_list

   63 expression_list: expr_option
   64                | declaration_list COMA expr_option

   65 expr_option: expression
   66            | expression INTERROGACION asign_ciclep DOSPUNTOS asign_ciclep

   67 asign_list: asign_cicle
   68           | declaration_list COMA asign_cicle

   69 asign_cicle: id_arr asign_op asign_ciclep
   70            | error asign_op asign_ciclep
   71            | id_arr error asign_ciclep

   72 asign_ciclep: expr_option
   73             | asign_cicle

   74 asign_op: ASIGNACION
   75         | SUMAVAR
   76         | RESTAVAR
   77         | MODVAR
   78         | DIVVAR

   79 tipo_data: INT
   80          | CHAR

   81 condicional_exp: IF PAREN_A ite_cond_options PAREN_C statement
   82                | IF PAREN_A ite_cond_options PAREN_C statement ELSE statement
   83                | SWITCH PAREN_A expr_option PAREN_C statement

   84 iterador_exp: WHILE PAREN_A ite_cond_options PAREN_C statement
   85             | FOR PAREN_A for_option PUNTOCOMA ite_cond_options PUNTOCOMA ite_cond_options PAREN_C statement
   86             | DO statement_list WHILE PAREN_A ite_cond_options PAREN_C PUNTOCOMA

   87 for_option: tipo_data asign_cicle
   88           | tipo_data error
   89           | expr_option
   90           | asign_cicle

   91 ite_cond_options: expr_option
   92                 | asign_cicle

   93 op_bool: IGUAL
   94        | DIF
   95        | MAYOR
   96        | MENOR
   97        | MAYORIGUAL
   98        | MENORIGUAL
   99        | AND
  100        | OR

  101 defFunc: ID PAREN_A param_list PAREN_C PUNTOCOMA
  102        | ID PAREN_A param_list PAREN_C block_stmt
  103        | ID PAREN_A PAREN_C PUNTOCOMA
  104        | ID PAREN_A PAREN_C block_stmt
  105        | error block_stmt
  106        | ID PAREN_A PAREN_C error
  107        | ID PAREN_A error PAREN_C block_stmt
  108        | error PAREN_A PAREN_C block_stmt

  109 param_list: param_tipo
  110           | param_list COMA param_tipo
  111           | param_list COMA error
  112           | error COMA param_tipo

  113 param_tipo: tipo_data id_arr
  114           | tipo_data
  115           | tipo_data error

  116 callFunc: ID PAREN_A arg_list PAREN_C
  117         | ID PAREN_A PAREN_C
  118         | error PAREN_A arg_list PAREN_C
  119         | error PAREN_A PAREN_C

  120 arg_list: expr_option
  121         | arg_list COMA expr_option

  122 etiqueta_statement: CASE expr_option DOSPUNTOS statement
  123                   | DEFAULT DOSPUNTOS statement
  124                   | ID DOSPUNTOS statement
  125                   | DEFAULT error
  126                   | error DOSPUNTOS

  127 block_stmt: CORCH_A statement_list CORCH_C
  128           | CORCH_A CORCH_C
  129           | CORCH_A error CORCH_C


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 20 41 42 48 49 70 71 88 105 106 107 108 111 112 115 118 119 125 126 129
    INCLUDE (258)
    DEFINE (259)
    ENTERO <number> (260) 23
    DIGITO <number> (261) 24
    ID <simb> (262) 18 45 101 102 103 104 106 107 116 117 124
    ERROR (263)
    SUMA <reservada> (264) 31 52
    RESTA <reservada> (265) 32 53
    MUL <reservada> (266) 33
    DIV <reservada> (267) 34
    ASIGNACION <reservada> (268) 74
    COMA <reservada> (269) 59 60 64 68 110 111 112 121
    PUNTOCOMA <reservada> (270) 3 4 7 8 11 85 86 101 103
    DOSPUNTOS <reservada> (271) 30 66 122 123 124 126
    CARACTER <reservada> (272) 25
    INC <reservada> (273) 50
    DEC <reservada> (274) 51
    MOD <reservada> (275) 35
    DIF <reservada> (276) 94
    IGUAL <reservada> (277) 93
    MAYOR <reservada> (278) 95
    MENOR <reservada> (279) 96
    MAYORIGUAL <reservada> (280) 97
    MENORIGUAL <reservada> (281) 98
    AND <reservada> (282) 99
    OR <reservada> (283) 100
    NOT <reservada> (284) 54
    SUMAVAR <reservada> (285) 75
    RESTAVAR <reservada> (286) 76
    MULVAR <reservada> (287)
    DIVVAR <reservada> (288) 78
    MODVAR <reservada> (289) 77
    INTERROGACION <reservada> (290) 30 66
    CORCH_A <reservada> (291) 127 128 129
    CORCH_C <reservada> (292) 127 128 129
    SPAREN_A <reservada> (293) 46 47 48 49
    SPAREN_C <reservada> (294) 46 47 48 49
    PAREN_A <reservada> (295) 26 30 81 82 83 84 85 86 101 102 103 104 106 107 108 116 117 118 119
    PAREN_C <reservada> (296) 26 30 81 82 83 84 85 86 101 102 103 104 106 107 108 116 117 118 119
    BREAK <reservada> (297) 17
    CASE <reservada> (298) 122
    CHAR <reservada> (299) 80
    CONTINUE <reservada> (300) 16
    DEFAULT <reservada> (301) 123 125
    DO <reservada> (302) 86
    ELSE <reservada> (303) 82
    FOR <reservada> (304) 85
    GOTO <reservada> (305) 18
    IF <reservada> (306) 81 82
    INT <reservada> (307) 79
    RETURN <reservada> (308) 14 15
    SWITCH <reservada> (309) 83
    VOID <reservada> (310) 6 8
    WHILE <reservada> (311) 84 86
    LOWER_THAN_ELSE (312)


No terminales con las reglas donde aparecen

    $accept (58)
        on left: 0
    statement_list (59)
        on left: 1 2
        on right: 0 2 86 127
    statement (60)
        on left: 3 4 5 6 7 8 9 10 11 12 13
        on right: 1 2 81 82 83 84 85 122 123 124
    res_tokens (61)
        on left: 14 15 16 17 18
        on right: 11
    primary_expression (62)
        on left: 19 20 21 22 23 24 25 26
        on right: 27 28 29
    expression (63)
        on left: 27 28 29 30
        on right: 15 26 28 29 30 65 66
    op (64)
        on left: 31 32 33 34 35
        on right: 28
    preSufix_expr (65)
        on left: 36 37 38
        on right: 21
    id_side (66)
        on left: 39 40 41 42
        on right: 36 38
    preSufix_cicle (67)
        on left: 43 44
        on right: 36 37 44
    id_arr (68)
        on left: 45 46 47 48 49
        on right: 19 37 39 40 46 47 58 60 69 71 113
    op_inc_dec (69)
        on left: 50 51
        on right: 39 40 41 42
    preSufix_op (70)
        on left: 52 53 54
        on right: 43 44
    declaration_init_list (71)
        on left: 55 56
        on right: 4
    declaration_init_listP (72)
        on left: 57 58 59 60
        on right: 55 59 60
    declaration_list (73)
        on left: 61 62
        on right: 3 64 68
    expression_list (74)
        on left: 63 64
        on right: 61
    expr_option (75)
        on left: 65 66
        on right: 46 49 63 64 72 83 89 91 120 121 122
    asign_list (76)
        on left: 67 68
        on right: 62
    asign_cicle (77)
        on left: 69 70 71
        on right: 57 59 67 68 73 87 90 92
    asign_ciclep (78)
        on left: 72 73
        on right: 66 69 70 71
    asign_op (79)
        on left: 74 75 76 77 78
        on right: 69 70
    tipo_data (80)
        on left: 79 80
        on right: 5 7 55 56 87 88 113 114 115
    condicional_exp (81)
        on left: 81 82 83
        on right: 9
    iterador_exp (82)
        on left: 84 85 86
        on right: 10
    for_option (83)
        on left: 87 88 89 90
        on right: 85
    ite_cond_options (84)
        on left: 91 92
        on right: 81 82 84 85 86
    op_bool (85)
        on left: 93 94 95 96 97 98 99 100
        on right: 29
    defFunc (86)
        on left: 101 102 103 104 105 106 107 108
        on right: 5 6 7 8
    param_list (87)
        on left: 109 110 111 112
        on right: 101 102 110 111
    param_tipo (88)
        on left: 113 114 115
        on right: 109 110 112
    callFunc (89)
        on left: 116 117 118 119
        on right: 22
    arg_list (90)
        on left: 120 121
        on right: 116 118 121
    etiqueta_statement (91)
        on left: 122 123 124 125 126
        on right: 12
    block_stmt (92)
        on left: 127 128 129
        on right: 13 102 104 105 107 108


Estado 0

    0 $accept: • statement_list $end

    error     desplazar e ir al estado 1
    ENTERO    desplazar e ir al estado 2
    DIGITO    desplazar e ir al estado 3
    ID        desplazar e ir al estado 4
    SUMA      desplazar e ir al estado 5
    RESTA     desplazar e ir al estado 6
    CARACTER  desplazar e ir al estado 7
    INC       desplazar e ir al estado 8
    DEC       desplazar e ir al estado 9
    NOT       desplazar e ir al estado 10
    CORCH_A   desplazar e ir al estado 11
    PAREN_A   desplazar e ir al estado 12
    BREAK     desplazar e ir al estado 13
    CASE      desplazar e ir al estado 14
    CHAR      desplazar e ir al estado 15
    CONTINUE  desplazar e ir al estado 16
    DEFAULT   desplazar e ir al estado 17
    DO        desplazar e ir al estado 18
    FOR       desplazar e ir al estado 19
    GOTO      desplazar e ir al estado 20
    IF        desplazar e ir al estado 21
    INT       desplazar e ir al estado 22
    RETURN    desplazar e ir al estado 23
    SWITCH    desplazar e ir al estado 24
    VOID      desplazar e ir al estado 25
    WHILE     desplazar e ir al estado 26

    statement_list         ir al estado 27
    statement              ir al estado 28
    res_tokens             ir al estado 29
    primary_expression     ir al estado 30
    expression             ir al estado 31
    preSufix_expr          ir al estado 32
    id_side                ir al estado 33
    preSufix_cicle         ir al estado 34
    id_arr                 ir al estado 35
    op_inc_dec             ir al estado 36
    preSufix_op            ir al estado 37
    declaration_init_list  ir al estado 38
    declaration_list       ir al estado 39
    expression_list        ir al estado 40
    expr_option            ir al estado 41
    asign_list             ir al estado 42
    asign_cicle            ir al estado 43
    tipo_data              ir al estado 44
    condicional_exp        ir al estado 45
    iterador_exp           ir al estado 46
    callFunc               ir al estado 47
    etiqueta_statement     ir al estado 48
    block_stmt             ir al estado 49


Estado 1

   20 primary_expression: error •
   42 id_side: error • op_inc_dec
   48 id_arr: error • SPAREN_A SPAREN_C
   49       | error • SPAREN_A expr_option SPAREN_C
   70 asign_cicle: error • asign_op asign_ciclep
  118 callFunc: error • PAREN_A arg_list PAREN_C
  119         | error • PAREN_A PAREN_C
  126 etiqueta_statement: error • DOSPUNTOS

    ASIGNACION  desplazar e ir al estado 50
    DOSPUNTOS   desplazar e ir al estado 51
    INC         desplazar e ir al estado 8
    DEC         desplazar e ir al estado 9
    SUMAVAR     desplazar e ir al estado 52
    RESTAVAR    desplazar e ir al estado 53
    DIVVAR      desplazar e ir al estado 54
    MODVAR      desplazar e ir al estado 55
    SPAREN_A    desplazar e ir al estado 56
    PAREN_A     desplazar e ir al estado 57

    $default  reduce usando la regla 20 (primary_expression)

    op_inc_dec  ir al estado 58
    asign_op    ir al estado 59


Estado 2

   23 primary_expression: ENTERO •

    $default  reduce usando la regla 23 (primary_expression)


Estado 3

   24 primary_expression: DIGITO •

    $default  reduce usando la regla 24 (primary_expression)


Estado 4

   45 id_arr: ID •
  116 callFunc: ID • PAREN_A arg_list PAREN_C
  117         | ID • PAREN_A PAREN_C
  124 etiqueta_statement: ID • DOSPUNTOS statement

    DOSPUNTOS  desplazar e ir al estado 60
    PAREN_A    desplazar e ir al estado 61

    $default  reduce usando la regla 45 (id_arr)


Estado 5

   52 preSufix_op: SUMA •

    $default  reduce usando la regla 52 (preSufix_op)


Estado 6

   53 preSufix_op: RESTA •

    $default  reduce usando la regla 53 (preSufix_op)


Estado 7

   25 primary_expression: CARACTER •

    $default  reduce usando la regla 25 (primary_expression)


Estado 8

   50 op_inc_dec: INC •

    $default  reduce usando la regla 50 (op_inc_dec)


Estado 9

   51 op_inc_dec: DEC •

    $default  reduce usando la regla 51 (op_inc_dec)


Estado 10

   54 preSufix_op: NOT •

    $default  reduce usando la regla 54 (preSufix_op)


Estado 11

  127 block_stmt: CORCH_A • statement_list CORCH_C
  128           | CORCH_A • CORCH_C
  129           | CORCH_A • error CORCH_C

    error     desplazar e ir al estado 62
    ENTERO    desplazar e ir al estado 2
    DIGITO    desplazar e ir al estado 3
    ID        desplazar e ir al estado 4
    SUMA      desplazar e ir al estado 5
    RESTA     desplazar e ir al estado 6
    CARACTER  desplazar e ir al estado 7
    INC       desplazar e ir al estado 8
    DEC       desplazar e ir al estado 9
    NOT       desplazar e ir al estado 10
    CORCH_A   desplazar e ir al estado 11
    CORCH_C   desplazar e ir al estado 63
    PAREN_A   desplazar e ir al estado 12
    BREAK     desplazar e ir al estado 13
    CASE      desplazar e ir al estado 14
    CHAR      desplazar e ir al estado 15
    CONTINUE  desplazar e ir al estado 16
    DEFAULT   desplazar e ir al estado 17
    DO        desplazar e ir al estado 18
    FOR       desplazar e ir al estado 19
    GOTO      desplazar e ir al estado 20
    IF        desplazar e ir al estado 21
    INT       desplazar e ir al estado 22
    RETURN    desplazar e ir al estado 23
    SWITCH    desplazar e ir al estado 24
    VOID      desplazar e ir al estado 25
    WHILE     desplazar e ir al estado 26

    statement_list         ir al estado 64
    statement              ir al estado 28
    res_tokens             ir al estado 29
    primary_expression     ir al estado 30
    expression             ir al estado 31
    preSufix_expr          ir al estado 32
    id_side                ir al estado 33
    preSufix_cicle         ir al estado 34
    id_arr                 ir al estado 35
    op_inc_dec             ir al estado 36
    preSufix_op            ir al estado 37
    declaration_init_list  ir al estado 38
    declaration_list       ir al estado 39
    expression_list        ir al estado 40
    expr_option            ir al estado 41
    asign_list             ir al estado 42
    asign_cicle            ir al estado 43
    tipo_data              ir al estado 44
    condicional_exp        ir al estado 45
    iterador_exp           ir al estado 46
    callFunc               ir al estado 47
    etiqueta_statement     ir al estado 48
    block_stmt             ir al estado 49


Estado 12

   26 primary_expression: PAREN_A • expression PAREN_C
   30 expression: PAREN_A • expression INTERROGACION expression DOSPUNTOS expression PAREN_C

    error     desplazar e ir al estado 65
    ENTERO    desplazar e ir al estado 2
    DIGITO    desplazar e ir al estado 3
    ID        desplazar e ir al estado 66
    SUMA      desplazar e ir al estado 5
    RESTA     desplazar e ir al estado 6
    CARACTER  desplazar e ir al estado 7
    INC       desplazar e ir al estado 8
    DEC       desplazar e ir al estado 9
    NOT       desplazar e ir al estado 10
    PAREN_A   desplazar e ir al estado 12

    primary_expression  ir al estado 30
    expression          ir al estado 67
    preSufix_expr       ir al estado 32
    id_side             ir al estado 33
    preSufix_cicle      ir al estado 34
    id_arr              ir al estado 68
    op_inc_dec          ir al estado 36
    preSufix_op         ir al estado 37
    callFunc            ir al estado 47


Estado 13

   17 res_tokens: BREAK •

    $default  reduce usando la regla 17 (res_tokens)


Estado 14

  122 etiqueta_statement: CASE • expr_option DOSPUNTOS statement

    error     desplazar e ir al estado 65
    ENTERO    desplazar e ir al estado 2
    DIGITO    desplazar e ir al estado 3
    ID        desplazar e ir al estado 66
    SUMA      desplazar e ir al estado 5
    RESTA     desplazar e ir al estado 6
    CARACTER  desplazar e ir al estado 7
    INC       desplazar e ir al estado 8
    DEC       desplazar e ir al estado 9
    NOT       desplazar e ir al estado 10
    PAREN_A   desplazar e ir al estado 12

    primary_expression  ir al estado 30
    expression          ir al estado 31
    preSufix_expr       ir al estado 32
    id_side             ir al estado 33
    preSufix_cicle      ir al estado 34
    id_arr              ir al estado 68
    op_inc_dec          ir al estado 36
    preSufix_op         ir al estado 37
    expr_option         ir al estado 69
    callFunc            ir al estado 47


Estado 15

   80 tipo_data: CHAR •

    $default  reduce usando la regla 80 (tipo_data)


Estado 16

   16 res_tokens: CONTINUE •

    $default  reduce usando la regla 16 (res_tokens)


Estado 17

  123 etiqueta_statement: DEFAULT • DOSPUNTOS statement
  125                   | DEFAULT • error

    error      desplazar e ir al estado 70
    DOSPUNTOS  desplazar e ir al estado 71


Estado 18

   86 iterador_exp: DO • statement_list WHILE PAREN_A ite_cond_options PAREN_C PUNTOCOMA

    error     desplazar e ir al estado 1
    ENTERO    desplazar e ir al estado 2
    DIGITO    desplazar e ir al estado 3
    ID        desplazar e ir al estado 4
    SUMA      desplazar e ir al estado 5
    RESTA     desplazar e ir al estado 6
    CARACTER  desplazar e ir al estado 7
    INC       desplazar e ir al estado 8
    DEC       desplazar e ir al estado 9
    NOT       desplazar e ir al estado 10
    CORCH_A   desplazar e ir al estado 11
    PAREN_A   desplazar e ir al estado 12
    BREAK     desplazar e ir al estado 13
    CASE      desplazar e ir al estado 14
    CHAR      desplazar e ir al estado 15
    CONTINUE  desplazar e ir al estado 16
    DEFAULT   desplazar e ir al estado 17
    DO        desplazar e ir al estado 18
    FOR       desplazar e ir al estado 19
    GOTO      desplazar e ir al estado 20
    IF        desplazar e ir al estado 21
    INT       desplazar e ir al estado 22
    RETURN    desplazar e ir al estado 23
    SWITCH    desplazar e ir al estado 24
    VOID      desplazar e ir al estado 25
    WHILE     desplazar e ir al estado 26

    statement_list         ir al estado 72
    statement              ir al estado 28
    res_tokens             ir al estado 29
    primary_expression     ir al estado 30
    expression             ir al estado 31
    preSufix_expr          ir al estado 32
    id_side                ir al estado 33
    preSufix_cicle         ir al estado 34
    id_arr                 ir al estado 35
    op_inc_dec             ir al estado 36
    preSufix_op            ir al estado 37
    declaration_init_list  ir al estado 38
    declaration_list       ir al estado 39
    expression_list        ir al estado 40
    expr_option            ir al estado 41
    asign_list             ir al estado 42
    asign_cicle            ir al estado 43
    tipo_data              ir al estado 44
    condicional_exp        ir al estado 45
    iterador_exp           ir al estado 46
    callFunc               ir al estado 47
    etiqueta_statement     ir al estado 48
    block_stmt             ir al estado 49


Estado 19

   85 iterador_exp: FOR • PAREN_A for_option PUNTOCOMA ite_cond_options PUNTOCOMA ite_cond_options PAREN_C statement

    PAREN_A  desplazar e ir al estado 73


Estado 20

   18 res_tokens: GOTO • ID

    ID  desplazar e ir al estado 74


Estado 21

   81 condicional_exp: IF • PAREN_A ite_cond_options PAREN_C statement
   82                | IF • PAREN_A ite_cond_options PAREN_C statement ELSE statement

    PAREN_A  desplazar e ir al estado 75


Estado 22

   79 tipo_data: INT •

    $default  reduce usando la regla 79 (tipo_data)


Estado 23

   14 res_tokens: RETURN •
   15           | RETURN • expression

    error     desplazar e ir al estado 65
    ENTERO    desplazar e ir al estado 2
    DIGITO    desplazar e ir al estado 3
    ID        desplazar e ir al estado 66
    SUMA      desplazar e ir al estado 5
    RESTA     desplazar e ir al estado 6
    CARACTER  desplazar e ir al estado 7
    INC       desplazar e ir al estado 8
    DEC       desplazar e ir al estado 9
    NOT       desplazar e ir al estado 10
    PAREN_A   desplazar e ir al estado 12

    PUNTOCOMA  reduce usando la regla 14 (res_tokens)

    primary_expression  ir al estado 30
    expression          ir al estado 76
    preSufix_expr       ir al estado 32
    id_side             ir al estado 33
    preSufix_cicle      ir al estado 34
    id_arr              ir al estado 68
    op_inc_dec          ir al estado 36
    preSufix_op         ir al estado 37
    callFunc            ir al estado 47


Estado 24

   83 condicional_exp: SWITCH • PAREN_A expr_option PAREN_C statement

    PAREN_A  desplazar e ir al estado 77


Estado 25

    6 statement: VOID • defFunc
    8          | VOID • defFunc PUNTOCOMA

    error  desplazar e ir al estado 78
    ID     desplazar e ir al estado 79

    defFunc  ir al estado 80


Estado 26

   84 iterador_exp: WHILE • PAREN_A ite_cond_options PAREN_C statement

    PAREN_A  desplazar e ir al estado 81


Estado 27

    0 $accept: statement_list • $end
    2 statement_list: statement_list • statement

    $end      desplazar e ir al estado 82
    error     desplazar e ir al estado 1
    ENTERO    desplazar e ir al estado 2
    DIGITO    desplazar e ir al estado 3
    ID        desplazar e ir al estado 4
    SUMA      desplazar e ir al estado 5
    RESTA     desplazar e ir al estado 6
    CARACTER  desplazar e ir al estado 7
    INC       desplazar e ir al estado 8
    DEC       desplazar e ir al estado 9
    NOT       desplazar e ir al estado 10
    CORCH_A   desplazar e ir al estado 11
    PAREN_A   desplazar e ir al estado 12
    BREAK     desplazar e ir al estado 13
    CASE      desplazar e ir al estado 14
    CHAR      desplazar e ir al estado 15
    CONTINUE  desplazar e ir al estado 16
    DEFAULT   desplazar e ir al estado 17
    DO        desplazar e ir al estado 18
    FOR       desplazar e ir al estado 19
    GOTO      desplazar e ir al estado 20
    IF        desplazar e ir al estado 21
    INT       desplazar e ir al estado 22
    RETURN    desplazar e ir al estado 23
    SWITCH    desplazar e ir al estado 24
    VOID      desplazar e ir al estado 25
    WHILE     desplazar e ir al estado 26

    statement              ir al estado 83
    res_tokens             ir al estado 29
    primary_expression     ir al estado 30
    expression             ir al estado 31
    preSufix_expr          ir al estado 32
    id_side                ir al estado 33
    preSufix_cicle         ir al estado 34
    id_arr                 ir al estado 35
    op_inc_dec             ir al estado 36
    preSufix_op            ir al estado 37
    declaration_init_list  ir al estado 38
    declaration_list       ir al estado 39
    expression_list        ir al estado 40
    expr_option            ir al estado 41
    asign_list             ir al estado 42
    asign_cicle            ir al estado 43
    tipo_data              ir al estado 44
    condicional_exp        ir al estado 45
    iterador_exp           ir al estado 46
    callFunc               ir al estado 47
    etiqueta_statement     ir al estado 48
    block_stmt             ir al estado 49


Estado 28

    1 statement_list: statement •

    $default  reduce usando la regla 1 (statement_list)


Estado 29

   11 statement: res_tokens • PUNTOCOMA

    PUNTOCOMA  desplazar e ir al estado 84


Estado 30

   27 expression: primary_expression •

    $default  reduce usando la regla 27 (expression)


Estado 31

   28 expression: expression • op primary_expression
   29           | expression • op_bool primary_expression
   65 expr_option: expression •
   66            | expression • INTERROGACION asign_ciclep DOSPUNTOS asign_ciclep
